--- a/package.json
+++ b/package.json
@@ -1,4 +1,8 @@
 {
+  "engines":{
+    "node":"20.19.0"
+    
+  },
   "name": "airbnb",
   "version": "1.0.0",
   "main": "index.js",
@@ -13,6 +17,7 @@
     "@mapbox/mapbox-sdk": "^0.16.2",
     "cloudinary": "^1.37.2",
     "connect-flash": "^0.1.1",
+    "connect-mongo": "^5.1.0",
     "dotenv": "^17.2.3",
     "ejs": "^3.1.10",
     "ejs-mate": "^4.0.0",
